--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
     "randomstring": "^1.2.2",
